--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -90,7 +90,7 @@
       color: $gray-300;
       width: fit-content;
       margin-bottom: 36px;
-      position: relative;
+      position: static;
     }
 
     .swiper-controller {
@@ -121,6 +121,8 @@
         justify-content: center;
         align-items: center;
         transition: all 0.15s ease;
+        position: static;
+        margin-top:0;
 
         i {
           color: $gray-400;
@@ -135,12 +137,12 @@
           }
         }
       }
-      .swiper-button-prev{
-        left:0;
-      }
-      .swiper-button-next{
-        right:0;
-      }
+      // .swiper-button-prev{
+      //   left:0;
+      // }
+      // .swiper-button-next{
+      //   right:0;
+      // }
     }
 
 
@@ -199,19 +201,19 @@
 
   // -- traveling slider -- //
 
-  .swiper-nav.traveling {
-    @include pad {
-      position: absolute;
-      width: 200px;
-      top: 10px;
-      right: 32px;
-      height: 32px;
-    }
+  // .swiper-nav.traveling {
+  //   @include pad {
+  //     position: absolute;
+  //     width: 200px;
+  //     top: 10px;
+  //     right: 32px;
+  //     height: 32px;
+  //   }
 
-    .swiper-button-next {
-      right: -32px
-    }
-  }
+  //   .swiper-button-next {
+  //     right: -32px
+  //   }
+  // }
 }
 
 
