修正首頁文字圖片

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -3,7 +3,7 @@
   <div class="container-sm">
     <!-- logo -->
     <h1 class=" me-md-3 me-lg-6 navbar-brand p-0">
-      <a class="" href="#"><img src="../assets/images/logo.svg" alt="Vivre"></a>
+      <a class="" href="index.html"><img src="../assets/images/logo.svg" alt="Vivre"></a>
     </h1>
     <!-- burger btn -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
