--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -122,7 +122,7 @@
         align-items: center;
         transition: all 0.15s ease;
         position: static;
-        margin-top:0;
+        margin-top: 0;
 
         i {
           color: $gray-400;
@@ -137,6 +137,7 @@
           }
         }
       }
+
       // .swiper-button-prev{
       //   left:0;
       // }
@@ -144,78 +145,35 @@
       //   right:0;
       // }
     }
-
-
   }
-
-
-
-  // -- articles slider -- //
-
-  // .articleSwiper {
-  //   &.swiper {
-  //     padding-bottom: 72px;
-
-  //     @include pad {
-  //       padding-bottom: 0;
-  //     }
-  //   }
-
-  //   .swiper-slide {
-  //     width: 324px;
-
-  //     @include pad {
-  //       width: 100%;
-  //     }
-  //   }
-  // }
-
-  // .swiper-nav.article {
-  //   width: 100%;
-  //   height: 32px;
-
-  //   @include pad {
-  //     position: absolute;
-  //     width: 232px;
-  //     left: 0;
-  //     bottom: 0;
-  //   }
-
-  //   .swiper-pagination {
-  //     bottom: -25px;
-
-  //     @include pad {
-  //       bottom: 40px;
-  //     }
-  //   }
-
-  //   .swiper-button-prev {
-  //     left: 60%;
-
-  //     @include pad {
-  //       left: inherit;
-  //     }
-  //   }
-  // }
-
-
-  // -- traveling slider -- //
-
-  // .swiper-nav.traveling {
-  //   @include pad {
-  //     position: absolute;
-  //     width: 200px;
-  //     top: 10px;
-  //     right: 32px;
-  //     height: 32px;
-  //   }
-
-  //   .swiper-button-next {
-  //     right: -32px
-  //   }
-  // }
 }
 
+.campaign {
+  position: relative;
+  overflow: hidden;
+  .deco-pic {
+    position: absolute;
+    &.left {
+      width: 217px;height: 81px;left: 8%;bottom:-8px;
+    }
+
+    &.right {
+      width: 160px;
+      height: 104px;
+      right: -48px;
+      bottom: -8px;
+      @include pad{
+        right: 8%;
+      }
+      @include desktop{
+           
+        width: 300px;
+        height: 196px;
+      }
+    }
+
+  }
+}
 
 .news-block {
   .nav-link {
