--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,8 @@
+@import url(https://unpkg.com/aos@2.3.1/dist/aos.css);
+
 // bootstrap function
 @import "bootstrap/scss/functions";
+
 // variables
 @import "./utils/variables";
 @import "./utils/variables-dark";
